[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://demos/Simple.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("icon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 387.852, -0.25, 0, 0.25, 0, 763.178, 0, 218.626, 0, -218.626 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("icon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}

[node name="Simple" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 550.473, 332.654 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 205.494
margin_top = 1.11078
margin_right = 284.494
margin_bottom = 21.1108
text = "Backwards"

[node name="Button3" type="Button" parent="."]
margin_left = 415.431
margin_top = 5.55389
margin_right = 494.431
margin_bottom = 25.5539
text = "Loop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 609.324
margin_top = 5.55389
margin_right = 688.324
margin_bottom = 25.5539
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Node" type="Node" parent="."]

[node name="icon2" type="Sprite" parent="Node"]
position = Vector2( 317.001, 458.37 )
texture = ExtResource( 1 )

[node name="icon3" type="Sprite" parent="Node"]
position = Vector2( 94.7535, 492.044 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 221.0
margin_top = 151.0
margin_right = 347.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 63, 27.5 )
text = "Label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
